falta por terminar

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ text-align: center;
 
   <hr>
 
-<p class="lacarta"><a href="lacarta/index.html">La Carta<img  src="img/carta.png" alt="carta" width="200"></a></p>
+<p class="lacarta"><a href="carta.html">La Carta<img  src="img/carta.png" alt="carta" width="200"></a></p>
 
  
    
