--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@ text-align: center;
  
    
 
-<p class="elcafe centro"><a href="elcafe/index.html" > El Café <img src="img/cafe.png" alt="cafe" width="200"> </a> </p>
+<p class="elcafe centro"><a href="cafe.html" > El Café <img src="img/cafe.png" alt="cafe" width="200"> </a> </p>
    
  
 
     
-<p class="contacto derecha">  <a href="contacto/index.html">Contacto <img src="img/contacto.png" alt="contacto" width="200"> </a> </p>
+<p class="contacto derecha">  <a href="contacto.html">Contacto <img src="img/contacto.png" alt="contacto" width="200"> </a> </p>
    
      
 </body>
